Added some functionality

--- a/part1.html
+++ b/part1.html
@@ -67,7 +67,8 @@
       </div>
       <div class="pagin">
         <div class="nextpage full-length">
-          <h1>next</h1>
+          <div class="next">next</div>
+          <div class="title">The Big Four (Or Five?)</div>
         </div>
       </div>
     </div>
@@ -110,10 +111,12 @@
       </div>
       <div class="pagin">
         <div class="prevpage">
-          <h1>back</h1>
+          <div class="next">prev</div>
+          <div class="title">Terms and Definitions</div>
         </div>
         <div class="nextpage">
-          <h1>next</h1>
+          <div class="next">next</div>
+          <div class="title">The Four Tastes in Combination</div>
         </div>
       </div>
     </div>
@@ -159,10 +162,12 @@
       </div>
       <div class="pagin">
         <div class="prevpage">
-          <h1>back</h1>
+          <div class="next">prev</div>
+          <div class="title">The Four Tastes</div>
         </div>
         <div class="nextpage">
-          <h1>next</h1>
+          <div class="next">next</div>
+          <div class="title">Other Flavor Categories</div>
         </div>
       </div>
     </div>
@@ -188,10 +193,12 @@
       </ul>
       <div class="pagin">
         <div class="prevpage">
-          <h1>back</h1>
+          <div class="next">prev</div>
+          <div class="title">The Four Tastes in Combination</div>
         </div>
         <div class="nextpage">
-          <h1>next</h1>
+          <div class="next">next</div>
+          <div class="title">Flavor and Beyond</div>
         </div>
       </div>
     </div>
@@ -204,10 +211,12 @@
       <p>So now that you’ve made it through the theory, it's time to practice a little. Take some time to try at least some of the experiments that follow. Start to analyze what you eat and drink. After that, we’ll turn to texture, mouthfeel and chemosensory irritations, but we’re hardly leaving taste and flavor behind. They’ll be coming along for the ride.</p>
       <div class="pagin">
         <div class="prevpage">
-          <h1>back</h1>
+          <div class="next">prev</div>
+          <div class="title">Other Flavor Categories</div>
         </div>
         <div class="nextpage">
-          <h1>next</h1>
+          <div class="next">next</div>
+          <div class="title">Experiments</div>
         </div>
       </div>
     </div>
@@ -254,7 +263,8 @@
         </div>
         <div class="pagin">
           <div class="prevpage full-length">
-            <h1>back</h1>
+            <div class="next">prev</div>
+            <div class="title">Other Flavor Categoriesh1 back</div>
           </div>
         </div>
       </p>
