A few more edits

--- a/part1.html
+++ b/part1.html
@@ -45,7 +45,7 @@
         <p>All substances, including foods, release more odor molecules when warm or hot than when cold, so their smells are much stronger. That's the reason garbage is so much more revolting on a hot day and the reason warm or hot foods tend to smell so much stronger than cold foods.</p>
       </div>
       <div class="sub natart">
-        <h3>Natural and Artificual FlavorsNATURAL AND ARTIFICIAL FLAVORS</h3>
+        <h3>Natural and Artificial Flavors</h3>
         <p>Maybe you've heard wine geeks talk about flavors of berries, oak, apples, melon, toast, pepper and even grass in various wines. Wait a minute, you say, wine is nothing but grapes and yeast, so how can it have all those other flavors? That's where the molecules come in. As wine ferments and ages, it goes through a lot of chemical changes, which result in all sorts of tastants and, especially, odor molecules being produced. Some of these molecules are very close to the odor molecules in other fruits or even vegetables, spices and grass, so they trigger the same receptor cells that the actual fruits, vegetables and spices do. We thus perceive the wine as smelling and tasting like all those other substances.</p>
         <p>Some researchers spend their time delving into the molecular structure of the foods we eat in order to isolate the molecules responsible for various flavors (they have, in fact, isolated more than 4000 such flavor compounds). They can then concentrate them and add them to other foods as "natural flavors." But they can also go one step further and analyze the concentrate with a chromatograph to see how the molecules are actually put together. With such an analysis, researchers can then sometimes reproduce the compounds artificially and use them to create such monstrosities as buttered-popcorn-flavored jelly beans.</p>
         <p>The problem with either natural or artificial flavors, the reason they never quite taste like the original, is that foods have numerous molecular compounds responsible for their characteristic flavors (fruits, for instance, can have hundreds of such compounds). Researchers necessarily focus on a few that seem to provide the most recognizable flavor and aroma, but they can't reproduce them all, so the resulting flavoring is fairly one-dimensional. Technology is improving in this area, though, so who knows? Maybe someday watermelon candy will actually taste like watermelon.</p>
@@ -111,7 +111,7 @@
       </div>
       <div class="pagin">
         <div class="prevpage">
-          <div class="next">prev</div>
+          <div class="next">back</div>
           <div class="title">Terms and Definitions</div>
         </div>
         <div class="nextpage">
@@ -162,7 +162,7 @@
       </div>
       <div class="pagin">
         <div class="prevpage">
-          <div class="next">prev</div>
+          <div class="next">back</div>
           <div class="title">The Four Tastes</div>
         </div>
         <div class="nextpage">
@@ -193,7 +193,7 @@
       </ul>
       <div class="pagin">
         <div class="prevpage">
-          <div class="next">prev</div>
+          <div class="next">back</div>
           <div class="title">The Four Tastes in Combination</div>
         </div>
         <div class="nextpage">
@@ -211,7 +211,7 @@
       <p>So now that you’ve made it through the theory, it's time to practice a little. Take some time to try at least some of the experiments that follow. Start to analyze what you eat and drink. After that, we’ll turn to texture, mouthfeel and chemosensory irritations, but we’re hardly leaving taste and flavor behind. They’ll be coming along for the ride.</p>
       <div class="pagin">
         <div class="prevpage">
-          <div class="next">prev</div>
+          <div class="next">back</div>
           <div class="title">Other Flavor Categories</div>
         </div>
         <div class="nextpage">
@@ -263,8 +263,8 @@
         </div>
         <div class="pagin">
           <div class="prevpage full-length">
-            <div class="next">prev</div>
-            <div class="title">Other Flavor Categoriesh1 back</div>
+            <div class="next">back</div>
+            <div class="title">Other Flavor Categories</div>
           </div>
         </div>
       </p>
