Moved some content to extract files, Added Contents

--- a/part1.html
+++ b/part1.html
@@ -13,7 +13,18 @@
       <h1>TASTE AND TEXTURE </h1>
       <h2>PART 1: TASTE</h2>
     </div>
-    <div class="main terms">
+    <div class="contents">
+      <ul>
+        <li> <a href="#terms">Terms and Definitions</a></li>
+        <li> <a href="#big-four">The Big Four (or five?)</a></li>
+        <li> <a href="#four-tastes">Four Tastes in Combination</a></li>
+        <li> <a href="#other-flavs">Other Flavor Categories</a></li>
+        <li> <a href="#flav-beyond">Flavor &amp; Beyond</a></li>
+        <li> <a href="#experiments">Experiments</a></li>
+        <li> <a href="part2.html">Part 2</a></li>
+      </ul>
+    </div>
+    <div class="main" id="terms">
       <h2>Some Definitions and Technical Terms</h2>
       <p>In line with most of the writing on the topic, I'll use "taste" to refer specifically to what we perceive through the taste buds and "flavor" to mean the perception that results from the combination of our senses of taste and smell.</p>
       <p>Technically, the sense of taste is called the gustatory sense; the sense of smell is called the olfactory sense.</p>
@@ -65,6 +76,15 @@
         <p>When I first started reading about this phenomenon, I thought, "I want to be a supertaster -- it sounds so refined, so superior." Alas, I concluded, I'm not. Then, as I continued to read up on the subject, I realized that it might not be so great to be a supertaster. Not only do many foods taste unpleasantly strong to them, but also (since our taste buds also convey information on temperature, pain and mouthfeel) the bite of chiles, mustard and ginger is unbearable and very hot or cold foods can be practically unpalatable. Foods with a high fat content seem unpleasantly greasy. Thus, supertasters tend to be very picky eaters. Nontasters will eat damn near anything, neither greatly liking nor disliking what they eat. Tasters, the least homogeneous group, vary a great deal in their likes and dislikes, but overall they tend to genuinely enjoy the widest variety of foods.</p>
         <p>So, we've looked at the way we perceive the basic tastes on the cellular level. Now, on to a more general look.</p>
       </div>
+      <div class="sub tasters">
+        <h3>Tasters, Nontasters and Supertasters</h3>
+        <p>So far, I've been working on the basis that everyone's sense of taste and smell is exactly the same -- that we all taste the same things with the same intensity. But this is not true. Certain medical conditions can affect our gustatory and olfactory senses, and some physiological factors also affect our sense of taste.</p>
+        <p>If you're old enough, you might remember a day in science class when the teacher passed out little slips of paper and told you all to put them on your tongues. She then sat back and watched, probably with some amusement, while some of the class sucked on them for minutes with nothing but a puzzled expression and others immediately spat them out, violently and with looks of betrayal.</p>
+        <p>Those little slips of paper were coated with PROP (6-n-propylthiouracil), or PTC (phenylthiocarbamide), chemicals that taste extremely bitter to some people but are tasteless to others. It turns out there's a genetic component to how strongly we taste things. In technical terms, the ability to taste these chemicals is determined by whether one has a particular dominant gene: those with two recessive "taste" genes are known as "nontasters," those with one recessive and one dominant are "tasters" and those with two dominant genes are called "supertasters." Overall, about a quarter of the population are nontasters, one quarter supertasters, and the remaining half are tasters.</p>
+        <p>Supertasters have a significantly higher number of taste buds than tasters, and both groups outnumber nontasters for taste buds. The averages for the three groups are 96 taste buds per square centimeter for nontasters, 184 for tasters, and a whopping 425 for supertasters. Not surprisingly, then, supertasters tend to taste everything more strongly, not just those two chemicals from science class. Sweets are sweeter, bitter things more bitter, and salty things saltier. I've heard more than one supertaster report that pickled foods taste like ammonia. Supertasters are less likely to enjoy the taste of alcohol as well.</p>
+        <p>When I first started reading about this phenomenon, I thought, "I want to be a supertaster -- it sounds so refined, so superior." Alas, I concluded, I'm not. Then, as I continued to read up on the subject, I realized that it might not be so great to be a supertaster. Not only do many foods taste unpleasantly strong to them, but also (since our taste buds also convey information on temperature, pain and mouthfeel) the bite of chiles, mustard and ginger is unbearable and very hot or cold foods can be practically unpalatable. Foods with a high fat content seem unpleasantly greasy. Thus, supertasters tend to be very picky eaters. Nontasters will eat damn near anything, neither greatly liking nor disliking what they eat. Tasters, the least homogeneous group, vary a great deal in their likes and dislikes, but overall they tend to genuinely enjoy the widest variety of foods.</p>
+        <p>So, we've looked at the way we perceive the basic tastes on the cellular level. Now, on to a more general look.</p>
+      </div>
       <div class="pagin">
         <div class="nextpage full-length">
           <div class="next">next</div>
@@ -72,7 +92,7 @@
         </div>
       </div>
     </div>
-    <div class="main big-four">
+    <div class="main" id="big-four">
       <h2>The Big Four (or is it five?)</h2>
       <div class="sub sweet">
         <h3>Sweet</h3>
@@ -97,7 +117,7 @@
         <p>The last of the "big four" tastes is bitter. Although we can detect bitter tastes early in our development, we don't tend to enjoy them; instead we do our best to avoid them. A liking for bitter tastes develops very late in life compared with the other three; indeed, some people never develop a taste for bitter foods at all (very generally speaking, Americans tend to shun bitter foods more than other cultures). That's probably the reason that the bitter foods we do eat are often looked upon as sophisticated and "grown-up." Coffee, dark chocolate, quinine (tonic) water, beer, bitter alcoholic aperitifs, bitter salad greens like arugula – we speak of them as "acquired tastes."</p>
         <p>And it's no surprise that bitter foods are scorned by so many. In the wild, bitter things are usually trouble -- they make us sick or kill us. In terms of evolution, we probably developed the ability to detect bitterness so we could spit out the offending plants before we swallowed them. So why on earth do some people develop a liking for something so initially repelling? Part of the reason is that bitter foods, like spicy foods, make our taste buds stand up and take notice, so to speak. They provide novelty, which we've already seen is something we need if we want to avoid becoming desensitized. Think of bitterness (in small doses) as nature's palate cleanser.</p>
       </div>
-      <div class="sub bitter">
+      <div class="sub umami">
         <h3>Umami</h3>
         <p>Earlier, we took a quick look at what researchers have found about glutamate and how it results in the flavor known as "umami" (often described as "savory" or "broth-like"). We saw that they aren't agreed on whether it counts as a basic taste.</p>
         <p>On the one hand, the Japanese have long regarded umami as a quality separate from the "big four" of sweet, salty, sour and bitter. And it's true that current research suggests that glutamate triggers taste cells in a completely different way from the tastants that trigger the other four tastes. Two researchers from the University of Miami have isolated a receptor that binds glutamate and proposed that it underlies the umami taste.</p>
@@ -120,7 +140,7 @@
         </div>
       </div>
     </div>
-    <div class="main four-tastes">
+    <div class="main" id="four-tastes">
       <h2>The four Tastes in Combination</h2>
       <p>For the most part, the basic tastes don't occur in foods solo. We've seen that our sense of taste reacts best to changes in stimuli, so perhaps it's no surprise that we like foods that excite more than one type of taste reaction. Because sweetness, salt, acid and bitterness are the foundation of our entire experience of flavor, the balance among the basic tastes can make or break a dish, even if we don't consciously realize it. Experiencing and studying the ways these tastes combine and balance each other, then, is one of most basic and crucial steps in analyzing dishes and learning to cook.</p>
       <div class="sub sweet-sour">
@@ -171,7 +191,7 @@
         </div>
       </div>
     </div>
-    <div class="main other-flavs">
+    <div class="main" id="other-flavs">
       <h2>Other Flavor Categories</h2>
       <p>Now I'm going to venture out past the four basic tastes. We're on much shakier scientific ground here, because researchers don't write about flavor categories the way they do they do about the sense of taste. Chefs and cookbook authors are not much help either. Generally when they mention categories of flavor, they don't offer much in the way of explanation; rather, they assume we know what they're talking about. And even those authors who do explicitly mention flavor categories are not in agreement on what they are. One book lists 14 elements of taste ranging from "bulby" to "spiced aromatic" to "oceanic." Another lists such flavors as "pungent" and "puckery" and other less helpful categories as "intense."</p>
       <p>I'm not disparaging these authors' efforts, honestly. It's tough going when you try to categorize flavors. Although I've tried to stick with the sorts of terms that show up regularly in cookbooks, reference books and restaurant reviews, my list is somewhat subjective as well.</p>
@@ -202,7 +222,7 @@
         </div>
       </div>
     </div>
-    <div class="main flav-beyond">
+    <div class="main" id="flav-beyond">
       <h2>Flavor and Beyond</h2>
       <p>So, now that we have a starting list of flavor categories, what do we do with it? Along with the information on basic tastes, use it to begin analyzing the foods that you cook and eat. As you taste a dish, ask yourself which basic tastes it has, and which flavor categories it belongs to.</p>
       <p>"Why?" you may ask, "what's in it for me?" First, if you like to cook, analyzing foods in terms of tastes and flavors (and, as we'll see, textures) can provide you with a lot of knowledge about substituting ingredients and improvising in the kitchen. For instance, suppose I have a recipe that calls for beets and I don't like them. To come up with a workable substitute, it helps a lot to know that beets are sweet, starchy and slightly earthy. What other foods have those attributes? Maybe sweet potatoes. Maybe rutabagas. The point is, I've got a place to start.</p>
@@ -220,7 +240,7 @@
         </div>
       </div>
     </div>
-    <div class="main experiments">
+    <div class="main" id="experiments">
       <h2>Experiments</h2>
       <p>None of these experiments are very difficult or time consuming; most require only a couple of common ingredients to perform. As you read through them, they may, in fact, strike you as terribly simple and obvious. Indeed, they are simple. But to get the most out of them, they do require two things: thought and concentration. If you're going to perform them, take the time to really think about your sensations as you do. You may want to take notes, if that helps you to concentrate.</p>
       <h3>Temperature and Flavor</h3>
