--- a/part2.html
+++ b/part2.html
@@ -13,9 +13,20 @@
     <h1>TASTE AND TEXTURE</h1>
     <h2>PART TWO: TEXTURE</h2>
     <p>by Janet A Zimmerman</p>
+    <div class="contents">
+      <ul>
+        <li> <a href="#intro">Intro</a></li>
+        <li> <a href="#cat">Categories of Texture</a></li>
+        <li> <a href="#chem">Chemosensory Irritation</a></li>
+        <li> <a href="#mouth">Mouthfeel</a></li>
+        <li> <a href="#tt">Texture &amp; Taste</a></li>
+        <li> <a href="#step">Next Steps</a></li>
+        <li> <a href="#exp">Experiments</a></li>
+      </ul>
+    </div>
   </div>
-  <div class="main intro">
-    <h3>INTRODUCTION</h3>
+  <div class="main" id="intro">
+    <h3>Introduction</h3>
     <p>A friend of mine spent quite a bit of time in Cambodia over the space of several years. On her last trip back, her hosts held a banquet in her honor, which featured, among other things, fried crickets. Being a gracious guest, she summoned up her resolve and tasted one. When she was back in the states relating this tale, I asked her what they tasted like. Her response: "The legs were sharp and stickery, the outside was really hard and crunchy, and the insides were squishy."</p>
     <p>The reason I'm starting out with this story is not to disgust anyone, nor to make a point about cultural food choices. It's this: if you read her description carefully, you should notice something. (Pause.) Did you get it? That's right -- her description says absolutely nothing about the taste of that cricket. It's all about texture. Sharp, stickery legs, hard carapace, squishy insides. Texture terms, every one.</p>
     <p>She's not alone in confusing taste and texture. For instance, if you read the copy on boxes of crackers or chips, chances are pretty good you'll see something about the "crispy" or "crunchy" taste. (Note to ad people: "crunchy" is not a taste.)</p>
@@ -36,8 +47,8 @@
       </div>
     </div>
   </div>
-  <div class="main cat">
-    <h3>CATEGORIES OF TEXTURE</h3>
+  <div class="main" id="cat">
+    <h3>Categories of Texture</h3>
     <p>"Texture," of course, is a very broad term, referring to different types of sensations. So what is texture, exactly? In the broadest sense, texture refers to the way food feels in the mouth, rather than how it tastes or smells. There are texture terms that describe the way foods feel against the teeth or how they coat the mouth, terms that refer to sensations of pain caused by some of the foods we eat, terms that describe the moisture content. Let's take a quick look.</p>
     <h4>Toothy Terms</h4>
     <p>Mention texture to the "person-on-the-street," and chances are very good he or she will think of the way food feels and breaks against the teeth. "Crunchy," "crispy," and "chewy," which might well be the three most commonly used texture terms, obviously refer to such sensations, as does the Italian term "al dente" (literally, "to the tooth"). (Interestingly, the term "toothsome" is not primarily about texture; its first dictionary meaning is "agreeable" or "palatable." However, restaurant reviewers seem to have kidnapped the term to stand in for "al dente," so I feel compelled to mention it here.)</p>
@@ -63,8 +74,8 @@
       </div>
     </div>
   </div>
-  <div class="main chem">
-    <h3>CHEMOSENSORY IRRITATION</h3>
+  <div class="main" id="chem">
+    <h3>Chemosensory Irritation</h3>
     <p>It might sound odd to talk about the burn of chiles as a texture. Certainly, this and other chemosensory irritations are categorically different from the kinds of textures we've been talking about so far. Yet all the burns and tingles we experience from mint, ginger, mustard and the like are non-gustatory, physical sensations directly caused by the foods we eat, and in that sense they fall into the broad category of texture.</p>
     <p>I began this class with a passage from Kunz and Kaminsky's book, in which I chided them for calling "picante" as a taste, but it's really not a surprising mistake. It seems bizarre to separate, for example, the taste of horseradish from the sinus-clearing, eye-burning sensations we experience when we eat it. Mint wouldn't be mint without the tingle; chiles aren't chiles without the burn.</p>
     <p>The fact is that we eat these foods much more for the irritation factor than for the taste or smell. Not that they don't have recognizable tastes and odors, but those are secondary to the feelings the foods cause.</p>
@@ -97,8 +108,8 @@
       </div>
     </div>
   </div>
-  <div class="main mouth">
-    <h3>MOUTHFEEL</h3>
+  <div class="main" id="mouth">
+    <h3>Mouthfeel</h3>
     <p>Chances are, if you're familiar with the term "mouthfeel," you associate it with descriptions of wine. Wine geeks always seem to go on about mouthfeel, which can seem extremely silly to wine novices. What is mouthfeel, you might ask, and why should you care about it?</p>
     <p>Good questions. One way to think about mouthfeel is this: take away all the other textural elements I've discussed, and what's left is mouthfeel. Okay, that's not terribly helpful, is it? Mouthfeel, then, involves the way foods coat or don't coat the mouth, whether they seem to linger or disappear immediately, whether they increase your saliva flow (lemon juice) or dry it up (tannins), whether they're smooth and silky or rough and "sharp" against the tongue. With liquids (beverages and sauces, primarily), mouthfeel includes the "body" or viscosity (how thick or thin the liquid is).</p>
     <p>Now let's see why we should care about mouthfeel. In the case of wine, beer, and other beverages, it's easy to see why mouthfeel plays such a big role in our descriptions. Without anything to crunch into or chew on, mouthfeel is very apparent. With food, some elements of it are more obvious than others. For instance, we tend to immediately tune into how smooth certain foods are or are not -- we notice right away if our hollandaise is lumpy or our ice cream is grainy.</p>
@@ -127,8 +138,8 @@
       </div>
     </div>
   </div>
-  <div class="main tt">
-    <h3>TEXTURE AND TASTE</h3>
+  <div class="main" id="tt">
+    <h3>Texture and Taste</h3>
     <p>So, now that we've separated texture from taste and we understand it a little better, let's turn around and put them back together (come on, you knew I would do this, didn't you?) They don't, after all, exist independent from each other; they're part of a package.</p>
     <p>Texture can affect flavor in a couple of important ways, so let's start with that. First, the texture of the food we eat helps to determine how much of the surface area can interact with our taste cells. Think about the difference in flavor intensity between carrot chunks, grated carrot and carrot juice. Put a big chunk of carrot in your mouth, and you don't taste much until you crunch down on it and break it into smaller pieces. Taste a spoonful of grated carrot, and the flavor is much more apparent. Sip on a glass of carrot juice, and you get a blast of carrot flavor immediately.</p>
     <p>The length of time food spends in the mouth also obviously will affect how strong its flavor seems. We've seen that viscous liquids and rich foods coat the mouth; their tastants thus spend more time with the taste cells than thinner liquids and leaner foods, so they often seem more flavorful. Dense foods, likewise, come into contact with more taste cells than do aerated, lighter foods. Chewy foods take longer to break down enough to swallow than do softer foods, so we get more flavor from them.</p>
@@ -142,8 +153,8 @@
       </div>
     </div>
   </div>
-  <div class="main step">
-    <h2>THE NEXT STEP</h2>
+  <div class="main" id="step">
+    <h2>The Next Step</h2>
     <p>Building on all the practice you've had analyzing the flavor of your foods, now you can begin to combine that with an awareness of their textures. Concentrate on all the crispy, crunchy, soft, silky creamy, puckery, chewy, moist, hot, succulent, and tingly aspects of your foods, and I promise you'll get more out of your cooking and dining.</p>
     <div class="pagin">
       <div class="prevpage">
@@ -154,8 +165,8 @@
       </div>
     </div>
   </div>
-  <div class="main exp">
-    <h2>EXPERIMENTS</h2>
+  <div class="main" id="exp">
+    <h2>Experiments</h2>
     <h3>Noticing Texture</h3>
     <p>Pick out two or three restaurant reviews from your local paper. Go through them and underline all the words that describe or refer to flavor (salty, smoky, sour, flavorful, etc.). Then, go through them a second time, and circle all the words that describe texture. Some words may fall into both categories ("buttery," for example, often refers to the flavor of butter, but sometimes describes a texture. Likewise for "meaty"). Compare the number of underlined to circled words.</p>
     <h3>Texture and Flavor</h3>
