Added contents and changed some classes to IDs because of content hrefs

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel="stylesheet" href="styles/style.css"/>
-  <title>Texture and Tasting: Part 2</title>
+  <title>Texture and Tasting</title>
 </head>
 <body>
   <div class="content">
     <div class="head">
-      <h1>Texture and Tasting (Part 2)</h1>
+      <h1>Texture and Tasting</h1>
     </div>
     <div class="main" id="foreword">
       <h2>A foreword from me, Eduardo</h2>
