--- a/part1.html
+++ b/part1.html
@@ -22,6 +22,7 @@
         <li> <a href="#flav-beyond">Flavor &amp; Beyond</a></li>
         <li> <a href="#experiments">Experiments</a></li>
         <li> <a href="part2.html">Part 2</a></li>
+        <li> <a href="index.html">Back to the home page thing</a></li>
       </ul>
     </div>
     <div class="main" id="terms">
