--- a/part2.html
+++ b/part2.html
@@ -15,6 +15,7 @@
     <p>by Janet A Zimmerman</p>
     <div class="contents">
       <ul>
+        <li><a href="part1.html">Part 1</a></li>
         <li> <a href="#intro">Intro</a></li>
         <li> <a href="#cat">Categories of Texture</a></li>
         <li> <a href="#chem">Chemosensory Irritation</a></li>
@@ -22,6 +23,7 @@
         <li> <a href="#tt">Texture &amp; Taste</a></li>
         <li> <a href="#step">Next Steps</a></li>
         <li> <a href="#exp">Experiments</a></li>
+        <li> <a href="index.html">Back to the home page thing</a></li>
       </ul>
     </div>
   </div>
@@ -43,7 +45,8 @@
     <p>From a very informal survey (okay, sitting around talking over drinks with a bunch of food-oriented friends), I think, too, that the textures we like -- even more so than the tastes we like -- are dependent on the foods we grew up with (which, of course, color our expectations of food for most of our lives). Okra is a perfect example. Of all the times I've heard people talk about okra, two things stand out. First, no one ever talks about the taste. Second, almost without exception, Southerners like it, Northerners say it's gross and slimy. Something tells me that it's no slimier in the North than in the South, so it seems likely that the difference lies in what the two groups grew up eating.</p>
     <div class="pagin">
       <div class="nextpage full-length">
-        <h1>next</h1>
+        <div class="next">next</div>
+        <div class="title">Categories of Texture</div>
       </div>
     </div>
   </div>
@@ -67,10 +70,12 @@
     <p>It may seem that as far as density goes, the lighter, the better, but this is not always so. Sometimes we want our desserts dense -- think of fudgy style brownies or flourless chocolate cake. Sometimes we like a dense, chewy bread rather than a light and fluffy Parker House roll. Sometimes we want clotted cream instead of whipped cream, or a quiche instead of a souffle.</p>
     <div class="pagin">
       <div class="prevpage">
-        <h1>back</h1>
+        <div class="next">back</div>
+        <div class="title">Introduction</div>
       </div>
       <div class="nextpage">
-        <h1>next</h1>
+        <div class="next">next</div>
+        <div class="title">Chemosensory Irritation</div>
       </div>
     </div>
   </div>
@@ -101,10 +106,12 @@
     <p>Carbonation has an additional benefit: it can serve to cut through the heavy texture of rich and fatty foods. Since we're just about to turn to the subject of "mouthfeel," we'll be seeing carbonation again soon.</p>
     <div class="pagin">
       <div class="prevpage">
-        <h1>back</h1>
+        <div class="next">back</div>
+        <div class="title">Categories of Texture</div>
       </div>
       <div class="nextpage">
-        <h1>next</h1>
+        <div class="next">next</div>
+        <div class="title">Mouthfeel</div>
       </div>
     </div>
   </div>
@@ -131,10 +138,12 @@
     <p>You don't have to follow my lead, though. There are plenty of ingredients, like fish sauce, with natural glutamates. Experiment with mushrooms, aged cheeses, cured meats, Worcestershire sauce, or grapefruit to alter the mouthfeel of the dishes you cook or eat.</p>
     <div class="pagin">
       <div class="prevpage">
-        <h1>back</h1>
+        <div class="next">back</div>
+        <div class="title">Chemosensory Irritation</div>
       </div>
       <div class="nextpage">
-        <h1>next</h1>
+        <div class="next">next</div>
+        <div class="title">Texture &amp; Taste</div>
       </div>
     </div>
   </div>
@@ -146,10 +155,12 @@
     <p>Does this mean that we want to limit ourselves to those textures that promote the greatest flavor? No, not at all. If you've learned only thing from this class, I hope it's that variety makes the our culinary world go round -- contrasting and balancing textures is just as important to our gustatory pleasure as combining and balancing tastes and flavors. We're human; it's in our nature to embrace variety.</p>
     <div class="pagin">
       <div class="prevpage">
-        <h1>back</h1>
+        <div class="next">back</div>
+        <div class="title">Mouthfeel</div>
       </div>
       <div class="nextpage">
-        <h1>next</h1>
+        <div class="next">next</div>
+        <div class="title">Next Steps</div>
       </div>
     </div>
   </div>
@@ -158,10 +169,12 @@
     <p>Building on all the practice you've had analyzing the flavor of your foods, now you can begin to combine that with an awareness of their textures. Concentrate on all the crispy, crunchy, soft, silky creamy, puckery, chewy, moist, hot, succulent, and tingly aspects of your foods, and I promise you'll get more out of your cooking and dining.</p>
     <div class="pagin">
       <div class="prevpage">
-        <h1>back</h1>
+        <div class="next">back</div>
+        <div class="title">Texture &amp; Taste</div>
       </div>
       <div class="nextpage">
-        <h1>next</h1>
+        <div class="next">next</div>
+        <div class="title">Experiments</div>
       </div>
     </div>
   </div>
@@ -182,7 +195,8 @@
     <p>Ask your questions about this course here.</p>
     <div class="pagin">
       <div class="prevpage full-length">
-        <h1>back</h1>
+        <div class="next">prev</div>
+        <div class="title">Next Steps</div>
       </div>
     </div>
   </div>
