--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="contents">
       <ul>
         <li> <a href="part1.html">Part 1</a></li>
-        <li> <a href="part2.html">Part2</a></li>
+        <li> <a href="part2.html">Part 2</a></li>
       </ul>
     </div>
     <div class="main" id="foreword">
       <h2>A foreword from me</h2>
       <p>
-         The contents of this guide on coffee tasting and palate training wasn't actually written by me. I was browsing on the /r/Coffee subreddit when I came across <a href="https://www.reddit.com/r/Coffee/comments/6jkwri/how_do_i_improve_my_taste_profiling/">this post.</a> This led me to forum posts <a href="https://forums.egullet.org/topic/41441-taste-texture-part-one/">one</a> and <a href="https://forums.egullet.org/topic/44502-taste-texture-part-two/">two.</a></p>
+         The contents of this guide on coffee tasting and palate training wasn't actually written by me. I was browsing on the /r/Coffee subreddit when I came across <a href="https://www.reddit.com/r/Coffee/comments/6jkwri/how_do_i_improve_my_taste_profiling/" target="_blank">this post.</a> This led me to forum posts <a href="https://forums.egullet.org/topic/41441-taste-texture-part-one/" target="_blank">one</a> and <a href="https://forums.egullet.org/topic/44502-taste-texture-part-two/" target="_blank">two.</a></p>
       <p>So me being the bored 20 year old me, I decided to pretty them up a little because I'm looking for things to do.</p>
     </div>
     <div class="main" id="display">
