Underline effects from hover.css

--- a/part1.html
+++ b/part1.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="styles/hover.css"/>
   <title>Taste and Texture Part 1</title>
 </head>
 <body>
@@ -16,14 +17,14 @@
     </div>
     <div class="contents">
       <ul>
-        <li> <a href="part2.html">Part 2</a></li>
-        <li> <a href="#terms">Terms and Definitions</a></li>
-        <li> <a href="#big-four">The Big Four (or five?)</a></li>
-        <li> <a href="#four-tastes">Four Tastes in Combination</a></li>
-        <li> <a href="#other-flavs">Other Flavor Categories</a></li>
-        <li> <a href="#flav-beyond">Flavor &amp; Beyond</a></li>
-        <li> <a href="#experiments">Experiments</a></li>
-        <li> <a href="index.html">Back to the home page thing</a></li>
+        <li> <a class="hvr-underline-from-left" href="part2.html">Part 2</a></li>
+        <li> <a class="hvr-underline-from-left" href="#terms">Terms and Definitions</a></li>
+        <li> <a class="hvr-underline-from-left" href="#big-four">The Big Four (or five?)</a></li>
+        <li> <a class="hvr-underline-from-left" href="#four-tastes">Four Tastes in Combination</a></li>
+        <li> <a class="hvr-underline-from-left" href="#other-flavs">Other Flavor Categories</a></li>
+        <li> <a class="hvr-underline-from-left" href="#flav-beyond">Flavor &amp; Beyond</a></li>
+        <li> <a class="hvr-underline-from-left" href="#experiments">Experiments</a></li>
+        <li> <a class="hvr-underline-from-left" href="index.html">Back to the home page thing</a></li>
       </ul>
     </div>
     <div class="main" id="terms">
