--- a/part2.html
+++ b/part2.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="styles/hover.css"/>
   <title>Taste and Texture Part 2</title>
 </head>
 <body>
@@ -16,15 +17,15 @@
     </div>
     <div class="contents">
       <ul>
-        <li><a href="part1.html">Part 1</a></li>
-        <li> <a href="#intro">Intro</a></li>
-        <li> <a href="#cat">Categories of Texture</a></li>
-        <li> <a href="#chem">Chemosensory Irritation</a></li>
-        <li> <a href="#mouth">Mouthfeel</a></li>
-        <li> <a href="#tt">Texture &amp; Taste</a></li>
-        <li> <a href="#step">Next Steps</a></li>
-        <li> <a href="#exp">Experiments</a></li>
-        <li> <a href="index.html">Back to the home page thing</a></li>
+        <li><a class="hvr-underline-from-left" href="part1.html">Part 1</a></li>
+        <li> <a class="hvr-underline-from-left" href="#intro">Intro</a></li>
+        <li> <a class="hvr-underline-from-left" href="#cat">Categories of Texture</a></li>
+        <li> <a class="hvr-underline-from-left" href="#chem">Chemosensory Irritation</a></li>
+        <li> <a class="hvr-underline-from-left" href="#mouth">Mouthfeel</a></li>
+        <li> <a class="hvr-underline-from-left" href="#tt">Texture &amp; Taste</a></li>
+        <li> <a class="hvr-underline-from-left" href="#step">Next Steps</a></li>
+        <li> <a class="hvr-underline-from-left" href="#exp">Experiments</a></li>
+        <li> <a class="hvr-underline-from-left" href="index.html">Back to the home page thing</a></li>
       </ul>
     </div>
     <div class="main" id="intro">
