--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel="stylesheet" href="styles/style.css"/>
+  <link rel="stylesheet" href="styles/hover.css"/>
   <title>Texture and Tasting</title>
 </head>
 <body>
@@ -14,8 +15,8 @@
     </div>
     <div class="contents">
       <ul>
-        <li> <a href="part1.html">Part 1</a></li>
-        <li> <a href="part2.html">Part 2</a></li>
+        <li> <a class="hvr-underline-from-left" href="part1.html">Part 1</a></li>
+        <li> <a class="hvr-underline-from-left" href="part2.html">Part 2</a></li>
       </ul>
     </div>
     <div class="main" id="foreword">
@@ -27,10 +28,10 @@
     <div class="main" id="display">
       <h2>Enter the posts</h2>
       <div class="parts part1">
-        <h3> <a href="part1.html">View Part 1 here</a></h3>
+        <h3 class="hvr-underline-from-left"> <a href="part1.html">View Part 1 here</a></h3>
       </div>
       <div class="parts part2">
-        <h3> <a href="part2.html">View Part 2 here</a></h3>
+        <h3 class="hvr-underline-from-left"><a href="part2.html">View Part 2 here</a></h3>
       </div>
     </div>
   </div>
