Rearranged some list elements

--- a/part1.html
+++ b/part1.html
@@ -14,17 +14,19 @@
       <h1>TASTE AND TEXTURE </h1>
       <h2>PART 1: TASTE</h2>
       <p>by Janet A Zimmerman</p>
+      <ul>
+        <li> <a class="hvr-underline-from-left" href="part2.html">Part 2</a></li>
+        <li> <a class="hvr-underline-from-left" href="index.html">Back Home</a></li>
+      </ul>
     </div>
     <div class="contents">
       <ul>
-        <li> <a class="hvr-underline-from-left" href="part2.html">Part 2</a></li>
         <li> <a class="hvr-underline-from-left" href="#terms">Terms and Definitions</a></li>
         <li> <a class="hvr-underline-from-left" href="#big-four">The Big Four (or five?)</a></li>
         <li> <a class="hvr-underline-from-left" href="#four-tastes">Four Tastes in Combination</a></li>
         <li> <a class="hvr-underline-from-left" href="#other-flavs">Other Flavor Categories</a></li>
         <li> <a class="hvr-underline-from-left" href="#flav-beyond">Flavor &amp; Beyond</a></li>
         <li> <a class="hvr-underline-from-left" href="#experiments">Experiments</a></li>
-        <li> <a class="hvr-underline-from-left" href="index.html">Back to the home page thing</a></li>
       </ul>
     </div>
     <div class="main" id="terms">
