--- a/part2.html
+++ b/part2.html
@@ -14,10 +14,13 @@
       <h1>TASTE AND TEXTURE</h1>
       <h2>PART 2: TEXTURE</h2>
       <p>by Janet A Zimmerman</p>
+      <ul>
+        <li><a class="hvr-underline-from-left" href="part1.html">Part 1</a></li>
+        <li> <a class="hvr-underline-from-left" href="index.html">Back Home</a></li>
+      </ul>
     </div>
     <div class="contents">
       <ul>
-        <li><a class="hvr-underline-from-left" href="part1.html">Part 1</a></li>
         <li> <a class="hvr-underline-from-left" href="#intro">Intro</a></li>
         <li> <a class="hvr-underline-from-left" href="#cat">Categories of Texture</a></li>
         <li> <a class="hvr-underline-from-left" href="#chem">Chemosensory Irritation</a></li>
@@ -25,7 +28,6 @@
         <li> <a class="hvr-underline-from-left" href="#tt">Texture &amp; Taste</a></li>
         <li> <a class="hvr-underline-from-left" href="#step">Next Steps</a></li>
         <li> <a class="hvr-underline-from-left" href="#exp">Experiments</a></li>
-        <li> <a class="hvr-underline-from-left" href="index.html">Back to the home page thing</a></li>
       </ul>
     </div>
     <div class="main" id="intro">
