Changing the fonts again

--- a/part2.html
+++ b/part2.html
@@ -11,8 +11,8 @@
 <body>
   <div class="content">
     <div class="head">
-      <h1>TASTE AND TEXTURE</h1>
-      <h2>PART 2: TEXTURE</h2>
+      <h1>TASTE &amp; TEXTURE </h1>
+      <h2>PART 2: TASTE</h2>
       <p>by Janet A Zimmerman</p>
       <ul>
         <li><a class="hvr-underline-from-left" href="part1.html">Part 1</a></li>
