--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="content">
     <div class="head">
-      <h1>TEXTURE &amp; TASTING</h1>
+      <h1>TASTE &amp; TEXTURE </h1>
     </div>
     <div class="contents">
       <ul>
