--- a/part1.html
+++ b/part1.html
@@ -11,8 +11,8 @@
 <body>
   <div class="content">
     <div class="head">
-      <h1>TASTE AND TEXTURE </h1>
-      <h2>PART 1: TASTE</h2>
+      <h1>TASTE &amp; TEXTURE </h1>
+      <h2>PART 1: TEXTURE</h2>
       <p>by Janet A Zimmerman</p>
       <ul>
         <li> <a class="hvr-underline-from-left" href="part2.html">Part 2</a></li>
