Fixed up the annoying shifty shift problem with pages without enough content

--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
     <div class="main" id="display">
       <h2>Enter the posts</h2>
       <div class="parts part1">
-        <h3 class="hvr-underline-from-left"> <a href="part1.html">View Part 1 here</a></h3>
+        <h3><a class="hvr-underline-from-left" href="part1.html"> View Part 1 here</a></h3>
       </div>
       <div class="parts part2">
-        <h3 class="hvr-underline-from-left"><a href="part2.html">View Part 2 here</a></h3>
+        <h3><a class="hvr-underline-from-left" href="part2.html">View Part 2 here</a></h3>
       </div>
+    </div>
+    <div class="main" id="me">
+      <h2>My Own Coffee Life</h2>
+      <p>I like coffee but like any coffee enthusiast, I'd say that's an understatement.</p>
+      <p>I'm brewing an Ethiopian Yirgacheffe Kochere from <a href="https://shop.padrecoffee.com.au/collections/coffee/products/ethiopia-yirgacheffe-kochere">Padre Coffee.</a></p>
+      <p>Currently using a Hario v60 using Matt Perger's standard <a href="https://vimeo.com/46612013">recipe and method </a>(because I'm lazy, so what, don't judge)</p>
     </div>
   </div>
 </body>
